--- a/biologic/config.json
+++ b/biologic/config.json
@@ -1,1 +1,1 @@
-{"driverpath": "drivers\\", "usb_port": "USB0", "instrument_type": "HCP-1005"}
+{"driverpath": "drivers\\", "usb_port": "192.168.0.1", "instrument_type": "HCP-1005"}
